--- a/src/Spielbrett.css
+++ b/src/Spielbrett.css
@@ -9,6 +9,8 @@
 #board {
   border-collapse: collapse;
   font-family: monospace;
+  background-image: url("board.png");
+  background-size: contain;
 }
 
 #winner {
@@ -22,20 +24,17 @@ td {
   font-weight: bold;
   font-size: 25px;
   color: #555;
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 70px;
   line-height: 50px;
   border: 3px solid #aaa;
-  background: #fff;
 }
 
 td.active {
   cursor: pointer;
-  background: #eeffe9;
 }
 
 td.active:hover {
-  background: #eeffff;
 }
 
 td.deck {
